# photo_classifier

./: .gitignore  pyproject.toml
photo_classifier/: main.py
