[tool.poetry]
name = "photo-classifier"
version = "0.1.0"
description = ""
authors = ["brennoflavio <contato@brennoflavio.com.br>"]
readme = "README.md"
packages = [{include = "photo_classifier"}]

[tool.poetry.dependencies]
python = "^3.10"
webdavclient3 = "^3.14.6"
black = "^23.7.0"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
